--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,2 +1,8 @@
-@import url(__lang-link/lang-link.css);
-@import url(__lang-links/__lang-links.css;);
+@import url(__columns/__columns.css);
+@import url(__lang-link/__lang-link.css);
+@import url(__lang-links/__lang-links.css);
+
+.header {
+  display: flex;
+  justify-content: center;
+}
