--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,7 @@
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/overlay/overlay.css);
+@import url(../blocks/page/page.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/place/place.css);
 @import url(../blocks/places/places.css);
