--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,4 @@
-@import url(__columns/__columns.css);
+@import url(__container/__container.css);
 @import url(__lang-link/__lang-link.css);
 @import url(__lang-links/__lang-links.css);
 
