--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,9 +5,7 @@
 }
 
 .page {
-  min-width: 320px;
-  max-width: 1280px;
   margin: auto;
-  background: #1f1f1f;
+  background: #2a2c2f;
   color: #ffffff;
 }
