--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,8 +1,8 @@
-@font-face {
+/* @font-face {
   font-family: "Inter";
   /* src: url(/Inter-Desktop/Inter-Black.otf); */
-  font-weight: normal;
-}
+/* font-weight: normal; */
+/* } */
 
 .page {
   margin: auto;
