--- a/blocks/lead/__title/__title.css
+++ b/blocks/lead/__title/__title.css
@@ -1,7 +1,9 @@
 .lead__title {
   font-size: 96px;
   line-height: 1;
-  font-style: normal;
   text-align: center;
   margin: 58px 0 32px 0;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 900;
 }
