--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,1 +1,9 @@
 @import url(__item/__item.css);
+@import url(__container/__container.css);
+
+.photo-grid {
+  margin: 0;
+  width: 95%;
+  display: flex;
+  justify-content: center;
+}
