--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,17 @@
+@import url(__description/__description.css);
+@import url(__heading/__heading.css);
 @import url(__image/__image.css);
 @import url(__link/__link.css);
 @import url(__paragraph/__paragraph.css);
 @import url(__title/__title.css);
 @import url(__url-heading/__url-heading.css);
 @import url(__website/__website.css);
+
+.place {
+  margin: 0 0 80px 0;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  width: 984px;
+  /* height: 584px; */
+}
