--- a/blocks/cover/__container/__container.css
+++ b/blocks/cover/__container/__container.css
@@ -1,7 +1,11 @@
 .cover__container {
   height: 740px;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  text-decoration: none;
+  color: #ffffff;
+  position: relative;
+  width: 100%;
 }
