--- a/blocks/cover/__subtitle/__subtitle.css
+++ b/blocks/cover/__subtitle/__subtitle.css
@@ -5,4 +5,8 @@
   font-size: 18px;
   line-height: 1.2;
   margin: 0;
+  width: 320px;
+  text-align: center;
+  position: relative;
+  z-index: 2;
 }
