--- a/blocks/cover/__title/__title.css
+++ b/blocks/cover/__title/__title.css
@@ -4,5 +4,9 @@
   font-weight: 900;
   font-size: 72px;
   line-height: 1.1;
-  margin: 0;
+  margin: 0 0 32px 0;
+  width: 656px;
+  text-align: center;
+  position: relative;
+  z-index: 2;
 }
