--- a/blocks/footer/__copyright/copyright.css
+++ b/blocks/footer/__copyright/copyright.css
@@ -1,3 +1,8 @@
 .footer__copyright {
   margin: 0;
+  font-size: 14px;
+  line-height: 16px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
 }
