--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,3 +1,9 @@
+@import url(__container/__container.css);
 @import url(__copyright/copyright.css);
 @import url(__link/__link.css);
 @import url(__links/__links.css);
+
+.footer {
+  width: 1184px;
+  margin: 0 48px 0 48px;
+}
