--- a/blocks/place/__link/__link.css
+++ b/blocks/place/__link/__link.css
@@ -1,3 +1,12 @@
 .place__link {
   color: #ffffff;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.2;
+}
+
+.place__link:hover {
+  opacity: 0.8;
 }
