--- a/blocks/photo-grid/__container/__container.css
+++ b/blocks/photo-grid/__container/__container.css
@@ -1,7 +1,7 @@
 .photo-grid__container {
   display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: 33% 33% 33%;
+  grid-template-columns: 284px 284px 284px 284px;
+  grid-template-rows: 213px 213px 213px;
   grid-gap: 16px;
   padding: 0;
   margin: 0;
