--- a/blocks/lead/__subtitle/__subtitle.css
+++ b/blocks/lead/__subtitle/__subtitle.css
@@ -2,9 +2,9 @@
   font-size: 30px;
   line-height: 1.2;
   text-align: center;
-  margin: 0 auto 0 auto;
   width: 620px;
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
+  margin: 0 auto 64px auto;
 }
