--- a/blocks/lead/__title/__title.css
+++ b/blocks/lead/__title/__title.css
@@ -1,9 +1,10 @@
 .lead__title {
   font-size: 96px;
-  line-height: 1;
+  line-height: 1.1;
   text-align: center;
-  margin: 58px 0 32px 0;
+  margin: 58px auto 32px auto;
   font-family: Inter;
   font-style: normal;
   font-weight: 900;
+  width: 720px;
 }
