--- a/blocks/header/__container/__container.css
+++ b/blocks/header/__container/__container.css
@@ -1,6 +1,7 @@
 .header__container {
   display: flex;
   justify-content: space-between;
-  width: 80%;
+  width: 100%;
   margin-top: 34px;
+  align-items: center;
 }
