--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,4 +5,41 @@
 .header {
   display: flex;
   justify-content: center;
+  width: 928px;
+  margin: 0 auto 0 auto;
+}
+
+@media screen and (max-width: 1279px) {
+  .header {
+    width: 928px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .header {
+    width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    width: 288px;
+  }
+
+  .header__container {
+    margin-top: 20px;
+  }
+
+  .logo {
+    width: 156px;
+  }
+
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  .header__lang-link_en {
+    display: none;
+  }
 }
