--- a/blocks/place/__website/__website.css
+++ b/blocks/place/__website/__website.css
@@ -1,7 +1,5 @@
+@import url(_new-hampshire/_new-hampshire.css);
+
 .place__website {
   margin: 0 0 48px 0;
-}
-
-.place__website_new-hampshire {
-  padding-top: 70px;
 }
