--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,8 +2,44 @@
 @import url(__container/__container.css);
 
 .photo-grid {
-  margin: 0 48px 0 48px;
+  margin: 0 auto 0 auto;
   display: flex;
   justify-content: center;
   width: 1184px;
+}
+
+@media screen and (max-width: 1279px) {
+  .photo-grid {
+    width: 928px;
+  }
+
+  .photo-grid__container {
+    grid-template-columns: 300px 300px 300px;
+    grid-template-rows: 225px 225px 225px 225px;
+    grid-gap: 14px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .photo-grid {
+    width: 720px;
+  }
+
+  .photo-grid__container {
+    grid-template-columns: 352px 352px;
+    grid-template-rows: 264px 264px 264px 264px 264px 264px;
+    grid-gap: 16px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    width: 288px;
+  }
+
+  .photo-grid__container {
+    grid-template-columns: 288px;
+    grid-template-rows: 216px 216px 216px 216px 216px 216px 216px 216px 216px 216px 216px 216px;
+    grid-gap: 12px;
+  }
 }
