--- a/blocks/place/__website/__website.css
+++ b/blocks/place/__website/__website.css
@@ -1,5 +1,6 @@
 @import url(_new-hampshire/_new-hampshire.css);
 
 .place__website {
-  margin: 0 0 48px 0;
+  margin: 0 0 40px 0;
+  width: 456px;
 }
