footer adaptive css

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,5 +5,44 @@
 
 .footer {
   width: 1184px;
-  margin: 0 48px 0 48px;
+  margin: 92px auto 24px auto;
+}
+
+@media screen and (max-width: 1279px) {
+  .footer {
+    width: 928px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .footer {
+    width: 720px;
+    margin: 88px auto 24px auto;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    width: 168px;
+    margin: 64px 136px 24px 16px;
+  }
+
+  .footer__container {
+    flex-wrap: wrap;
+    height: 198px;
+  }
+
+  .footer__links {
+    flex-wrap: wrap;
+    margin-bottom: 48px;
+  }
+
+  .footer__link {
+    font-size: 24px;
+    line-height: 1;
+  }
+
+  .footer__copyright {
+    line-height: 1;
+  }
 }
