--- a/blocks/footer/__link/__link.css
+++ b/blocks/footer/__link/__link.css
@@ -3,7 +3,7 @@
   color: #ffffff;
   margin-right: 18px;
   font-size: 16px;
-  line-height: 18px;
+  line-height: 1.1;
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
