--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,26 +5,27 @@
 
 .footer {
   width: 1184px;
-  margin: 92px auto 24px auto;
+  margin: 92px auto 0 auto;
+  padding-bottom: 24px;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1280px) {
   .footer {
     width: 928px;
   }
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1024px) {
   .footer {
     width: 720px;
-    margin: 88px auto 24px auto;
+    margin: 88px auto 0 auto;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .footer {
     width: 168px;
-    margin: 64px 136px 24px 16px;
+    margin: 64px 136px 0px 16px;
   }
 
   .footer__container {
@@ -33,8 +34,8 @@
   }
 
   .footer__links {
-    flex-wrap: wrap;
-    margin-bottom: 48px;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   .footer__link {
@@ -44,5 +45,6 @@
 
   .footer__copyright {
     line-height: 1;
+    margin: 48px 0 0 0;
   }
 }
