--- a/blocks/footer/__link-text/__link-text.css
+++ b/blocks/footer/__link-text/__link-text.css
@@ -1,4 +1,8 @@
 .footer__link {
+  margin: 0 0 32px 0;
+}
+
+.footer__link-text {
   text-decoration: none;
   color: #ffffff;
   margin-right: 18px;
@@ -9,6 +13,6 @@
   font-weight: normal;
 }
 
-.footer__link:hover {
+.footer__link-text:hover {
   opacity: 0.8;
 }
