--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,8 +3,8 @@
 
 .photo-grid {
   margin: 0 auto 0 auto;
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
   width: 1184px;
 }
 
