--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,17 +3,17 @@
 
 .photo-grid {
   margin: 0 auto 0 auto;
-  /* display: flex;
-  justify-content: center; */
   width: 1184px;
+  display: grid;
+  grid-template-columns: 284px 284px 284px 284px;
+  grid-template-rows: 213px 213px 213px;
+  grid-gap: 16px;
+  padding: 0;
 }
 
 @media screen and (max-width: 1279px) {
   .photo-grid {
     width: 928px;
-  }
-
-  .photo-grid__container {
     grid-template-columns: 300px 300px 300px;
     grid-template-rows: 225px 225px 225px 225px;
     grid-gap: 14px;
@@ -23,9 +23,6 @@
 @media screen and (max-width: 1023px) {
   .photo-grid {
     width: 720px;
-  }
-
-  .photo-grid__container {
     grid-template-columns: 352px 352px;
     grid-template-rows: 264px 264px 264px 264px 264px 264px;
     grid-gap: 16px;
@@ -35,9 +32,6 @@
 @media screen and (max-width: 767px) {
   .photo-grid {
     width: 288px;
-  }
-
-  .photo-grid__container {
     grid-template-columns: 288px;
     grid-template-rows: 216px 216px 216px 216px 216px 216px 216px 216px 216px 216px 216px 216px;
     grid-gap: 12px;
