--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,3 @@
-@import url(__container/__container.css);
 @import url(__copyright/copyright.css);
 @import url(__link/__link.css);
 @import url(__links/__links.css);
@@ -8,6 +7,9 @@
   width: 1184px;
   margin: 92px auto 0 auto;
   padding-bottom: 24px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 1279px) {
@@ -27,9 +29,6 @@
   .footer {
     width: 168px;
     margin: 64px 136px 0px 16px;
-  }
-
-  .footer__container {
     flex-wrap: wrap;
   }
 
