--- a/blocks/cover/__container/__container.css
+++ b/blocks/cover/__container/__container.css
@@ -9,3 +9,9 @@
   position: relative;
   width: 100%;
 }
+
+@media screen and (max-width: 767px) {
+  .cover__container {
+    height: 200px;
+  }
+}
