--- a/blocks/cover/__subtitle/__subtitle.css
+++ b/blocks/cover/__subtitle/__subtitle.css
@@ -10,3 +10,11 @@
   position: relative;
   z-index: 2;
 }
+
+@media screen and (max-width: 767px) {
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 1.1;
+    width: 288px;
+  }
+}
