--- a/blocks/footer/__copyright/copyright.css
+++ b/blocks/footer/__copyright/copyright.css
@@ -6,3 +6,10 @@
   font-style: normal;
   font-weight: normal;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__copyright {
+    line-height: 1;
+    margin: 48px 0 0 0;
+  }
+}
