--- a/blocks/footer/__link-text/__link-text.css
+++ b/blocks/footer/__link-text/__link-text.css
@@ -12,3 +12,10 @@
 .footer__link-text:hover {
   opacity: 0.8;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__link-text {
+    font-size: 24px;
+    line-height: 1;
+  }
+}
