--- a/blocks/header/__container/__container.css
+++ b/blocks/header/__container/__container.css
@@ -5,3 +5,9 @@
   margin-top: 34px;
   align-items: center;
 }
+
+@media screen and (max-width: 767px) {
+  .header__container {
+    margin-top: 20px;
+  }
+}
