intro block media tags

--- a/blocks/intro/__text/_subtitle/_subtitle.css
+++ b/blocks/intro/__text/_subtitle/_subtitle.css
@@ -3,3 +3,9 @@
   line-height: 1.4;
   margin: 0 0 32px 0;
 }
+
+@media screen and (max-width: 767px) {
+  .intro__text_subtitle {
+    line-height: 1.2;
+  }
+}
