--- a/blocks/intro/__title/__title.css
+++ b/blocks/intro/__title/__title.css
@@ -6,3 +6,10 @@
   line-height: 1;
   margin: 0 0 40px 0;
 }
+
+@media screen and (max-width: 767px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 1.1;
+  }
+}
