--- a/blocks/lead/__subtitle/__subtitle.css
+++ b/blocks/lead/__subtitle/__subtitle.css
@@ -8,3 +8,24 @@
   font-weight: normal;
   margin: 0 auto 64px auto;
 }
+
+@media screen and (max-width: 1279px) {
+  .lead__subtitle {
+    margin: 0 auto 56px auto;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .lead__subtitle {
+    margin: 0 auto 56px auto;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__subtitle {
+    font-size: 16px;
+    line-height: 20px;
+    margin: 0 auto 40px auto;
+    width: 288px;
+  }
+}
