--- a/blocks/lead/__title/__title.css
+++ b/blocks/lead/__title/__title.css
@@ -6,3 +6,24 @@
   font-weight: 900;
   width: 720px;
 }
+
+@media screen and (max-width: 1279px) {
+  .lead__title {
+    margin: 50px auto 32px auto;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .lead__title {
+    margin: 50px auto 32px auto;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 1.1;
+    margin: 50px auto 16px auto;
+    width: 288px;
+  }
+}
