--- a/blocks/place/__description/__description.css
+++ b/blocks/place/__description/__description.css
@@ -1,3 +1,9 @@
 .place__description {
   padding-top: 32px;
 }
+
+@media screen and (max-width: 1023px) {
+  .place__description {
+    padding: 0;
+  }
+}
