--- a/blocks/place/__paragraph/__paragraph.css
+++ b/blocks/place/__paragraph/__paragraph.css
@@ -8,3 +8,9 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+@media screen and (max-width: 767px) {
+  .place__paragraph {
+    text-align: start;
+  }
+}
