--- a/blocks/place/__paragraph/_main/_main.css
+++ b/blocks/place/__paragraph/_main/_main.css
@@ -4,3 +4,22 @@
   margin: 0 0 24px 0;
   width: 484px;
 }
+
+@media screen and (max-width: 1270px) {
+  .place__paragraph_main {
+    width: 456px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .place__paragraph_main {
+    width: 352px;
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__paragraph_main {
+    width: 288px;
+  }
+}
