--- a/blocks/place/__paragraph/_sub/_sub.css
+++ b/blocks/place/__paragraph/_sub/_sub.css
@@ -4,3 +4,21 @@
   margin: 0 0 24px 0;
   width: 484px;
 }
+
+@media screen and (max-width: 1270px) {
+  .place__paragraph_sub {
+    width: 456px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .place__paragraph_sub {
+    width: 352px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__paragraph_sub {
+    width: 288px;
+  }
+}
