--- a/blocks/place/__title/__title.css
+++ b/blocks/place/__title/__title.css
@@ -7,3 +7,25 @@
   margin: 0 0 48px 0;
   width: 460px;
 }
+
+@media screen and (max-width: 1270px) {
+  .place__title {
+    width: 440px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .place__title {
+    width: 340px;
+    font-size: 42px;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__title {
+    font-size: 32px;
+    line-height: 1.1;
+    width: 288px;
+  }
+}
