--- a/blocks/place/__website/__website.css
+++ b/blocks/place/__website/__website.css
@@ -4,3 +4,15 @@
   margin: 0 0 40px 0;
   width: 456px;
 }
+
+@media screen and (max-width: 1023px) {
+  .place__website {
+    width: 352px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__website {
+    display: none;
+  }
+}
