--- a/blocks/place/__website/_new-hampshire/_new-hampshire.css
+++ b/blocks/place/__website/_new-hampshire/_new-hampshire.css
@@ -1,3 +1,9 @@
 .place__website_new-hampshire {
   padding-top: 80px;
 }
+
+@media screen and (max-width: 1023px) {
+  .place__website_new-hampshire {
+    padding: 0;
+  }
+}
