--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -14,3 +14,16 @@
   justify-content: center;
   width: 984px;
 }
+
+@media screen and (max-width: 1023px) {
+  .place {
+    margin: 0 0 72px 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place {
+    margin: 0 0 48px 0;
+    flex-wrap: wrap;
+  }
+}
