--- a/blocks/intro/__text/__text.css
+++ b/blocks/intro/__text/__text.css
@@ -2,7 +2,5 @@
 @import url(_subtitle/_subtitle.css);
 
 .intro__text {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
 }
