--- a/blocks/lead/__subtitle/__subtitle.css
+++ b/blocks/lead/__subtitle/__subtitle.css
@@ -3,9 +3,7 @@
   line-height: 1.2;
   text-align: center;
   width: 620px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   margin: 0 auto 64px auto;
 }
 
