--- a/blocks/cover/__subtitle/__subtitle.css
+++ b/blocks/cover/__subtitle/__subtitle.css
@@ -1,7 +1,5 @@
 .cover__subtitle {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 18px;
   line-height: 1.2;
   margin: 0;
