--- a/blocks/footer/__copyright/copyright.css
+++ b/blocks/footer/__copyright/copyright.css
@@ -2,9 +2,7 @@
   margin: 0;
   font-size: 14px;
   line-height: 16px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
 }
 
 @media screen and (max-width: 767px) {
