--- a/blocks/footer/__link-text/__link-text.css
+++ b/blocks/footer/__link-text/__link-text.css
@@ -4,9 +4,7 @@
   margin-right: 18px;
   font-size: 16px;
   line-height: 1.1;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
 }
 
 .footer__link-text:hover {
