--- a/blocks/header/__lang-link/__lang-link.css
+++ b/blocks/header/__lang-link/__lang-link.css
@@ -6,9 +6,7 @@
   margin-left: 20px;
   font-size: 24px;
   line-height: 1.2;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
 }
 
 .header__lang-link:hover {
