--- a/blocks/intro/__list/__list.css
+++ b/blocks/intro/__list/__list.css
@@ -1,7 +1,5 @@
 .intro__list {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 12px;
   line-height: 1.5;
   list-style: none;
