--- a/blocks/lead/__caption/__caption.css
+++ b/blocks/lead/__caption/__caption.css
@@ -1,8 +1,6 @@
 .lead__caption {
   margin: 8px 0 125px 0;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 10px;
   line-height: 1.4;
   letter-spacing: 1.5px;
