--- a/blocks/place/__link/__link.css
+++ b/blocks/place/__link/__link.css
@@ -1,8 +1,6 @@
 .place__link {
   color: #ffffff;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 18px;
   line-height: 1.2;
 }
