--- a/blocks/place/__url-heading/__url-heading.css
+++ b/blocks/place/__url-heading/__url-heading.css
@@ -1,7 +1,5 @@
 .place__url-heading {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 12px;
   line-height: 1;
   color: #aaaaaa;
