--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,6 +3,8 @@
 .page {
   font-family: Inter, Arial, Helvetica, sans-serif;
   font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   background: #e5e5e5;
   margin: 0;
 }
