text element max-width

--- a/blocks/place/__paragraph/_main/_main.css
+++ b/blocks/place/__paragraph/_main/_main.css
@@ -2,24 +2,24 @@
   font-size: 18px;
   line-height: 163%;
   margin: 0 0 24px 0;
-  width: 484px;
+  max-width: 484px;
 }
 
 @media screen and (max-width: 1270px) {
   .place__paragraph_main {
-    width: 456px;
+    max-width: 456px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .place__paragraph_main {
-    width: 352px;
+    max-width: 352px;
     font-size: 16px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .place__paragraph_main {
-    width: 288px;
+    max-width: 288px;
   }
 }
