--- a/blocks/cover/__subtitle/__subtitle.css
+++ b/blocks/cover/__subtitle/__subtitle.css
@@ -3,7 +3,7 @@
   font-size: 18px;
   line-height: 1.2;
   margin: 0;
-  width: 320px;
+  max-width: 320px;
   text-align: center;
   position: relative;
   z-index: 2;
@@ -13,6 +13,6 @@
   .cover__subtitle {
     font-size: 14px;
     line-height: 1.1;
-    width: 288px;
+    max-width: 288px;
   }
 }
