--- a/blocks/cover/__title/__title.css
+++ b/blocks/cover/__title/__title.css
@@ -3,7 +3,7 @@
   font-size: 72px;
   line-height: 1.1;
   margin: 0 0 32px 0;
-  width: 656px;
+  max-width: 656px;
   text-align: center;
   position: relative;
   z-index: 2;
@@ -13,6 +13,6 @@
   .cover__title {
     font-size: 32px;
     line-height: 1.1;
-    width: 288px;
+    max-width: 288px;
   }
 }
