--- a/blocks/lead/__subtitle/__subtitle.css
+++ b/blocks/lead/__subtitle/__subtitle.css
@@ -2,7 +2,7 @@
   font-size: 30px;
   line-height: 1.2;
   text-align: center;
-  width: 620px;
+  max-width: 620px;
   font-weight: 400;
   margin: 0 auto 64px auto;
 }
@@ -24,6 +24,6 @@
     font-size: 16px;
     line-height: 20px;
     margin: 0 auto 40px auto;
-    width: 288px;
+    max-width: 288px;
   }
 }
