--- a/blocks/lead/__title/__title.css
+++ b/blocks/lead/__title/__title.css
@@ -4,7 +4,7 @@
   text-align: center;
   margin: 58px auto 32px auto;
   font-weight: 900;
-  width: 720px;
+  max-width: 720px;
 }
 
 @media screen and (max-width: 1279px) {
@@ -24,6 +24,6 @@
     font-size: 40px;
     line-height: 1.1;
     margin: 50px auto 16px auto;
-    width: 288px;
+    max-width: 288px;
   }
 }
