--- a/blocks/place/__title/__title.css
+++ b/blocks/place/__title/__title.css
@@ -3,18 +3,18 @@
   font-size: 72px;
   line-height: 1.1;
   margin: 0 0 48px 0;
-  width: 460px;
+  max-width: 460px;
 }
 
 @media screen and (max-width: 1270px) {
   .place__title {
-    width: 440px;
+    max-width: 440px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .place__title {
-    width: 340px;
+    max-width: 340px;
     font-size: 42px;
     line-height: 1.1;
   }
@@ -24,6 +24,6 @@
   .place__title {
     font-size: 32px;
     line-height: 1.1;
-    width: 288px;
+    max-width: 288px;
   }
 }
