--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,24 +5,24 @@
 .header {
   display: flex;
   justify-content: center;
-  width: 928px;
+  max-width: 928px;
   margin: 0 auto 0 auto;
 }
 
 @media screen and (max-width: 1279px) {
   .header {
-    width: 928px;
+    max-width: 928px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .header {
-    width: 720px;
+    max-width: 720px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .header {
-    width: 288px;
+    max-width: 288px;
   }
 }
