--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -7,25 +7,25 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  width: 1184px;
+  max-width: 1184px;
   margin: 0 auto 0 auto;
   align-items: center;
 }
 
 @media screen and (max-width: 1279px) {
   .cover {
-    width: 1024px;
+    max-width: 1024px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .cover {
-    width: 768px;
+    max-width: 768px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .cover {
-    width: 320px;
+    max-width: 320px;
   }
 }
