--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,7 +4,7 @@
 @import url(__link-text/__link-text.css);
 
 .footer {
-  width: 1184px;
+  max-width: 1184px;
   margin: 92px auto 0 auto;
   padding-bottom: 24px;
   display: flex;
@@ -14,20 +14,20 @@
 
 @media screen and (max-width: 1279px) {
   .footer {
-    width: 928px;
+    max-width: 928px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .footer {
-    width: 720px;
+    max-width: 720px;
     margin: 88px auto 0 auto;
   }
 }
 
 @media screen and (max-width: 767px) {
   .footer {
-    width: 168px;
+    max-width: 168px;
     margin: 64px 136px 0px 16px;
     flex-wrap: wrap;
   }
