--- a/blocks/lead/__image/__image.css
+++ b/blocks/lead/__image/__image.css
@@ -1,9 +1,9 @@
 .lead__image {
   width: 100%;
-  height: 615px;
+  /* height: 615px; */
 }
 
-@media screen and (max-width: 1279px) {
+/* @media screen and (max-width: 1279px) {
   .lead__image {
     height: 580px;
   }
@@ -21,4 +21,4 @@
     width: 320px;
     height: 200px;
   }
-}
+} */
