--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -6,27 +6,27 @@
 .lead {
   display: flex;
   flex-wrap: wrap;
-  width: 984px;
+  max-width: 984px;
   margin: 0 auto 125px auto;
 }
 
 @media screen and (max-width: 1279px) {
   .lead {
-    width: 928px;
+    max-width: 928px;
     margin: 0 auto 92px auto;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .lead {
-    width: 768px;
+    max-width: 768px;
     margin: 0 auto 88px auto;
   }
 }
 
 @media screen and (max-width: 767px) {
   .lead {
-    width: 320px;
+    max-width: 320px;
     margin: 0 auto 92px auto;
   }
 }
