--- a/blocks/place/__image/__image.css
+++ b/blocks/place/__image/__image.css
@@ -1,25 +1,3 @@
 .place__image {
-  width: 460px;
-  height: 460px;
-}
-
-@media screen and (max-width: 1270px) {
-  .place__image {
-    width: 440px;
-    height: 440px;
-  }
-}
-
-@media screen and (max-width: 1023px) {
-  .place__image {
-    width: 340px;
-    height: 340px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .place__image {
-    width: 320px;
-    height: 320px;
-  }
+  width: 100%;
 }
