--- a/blocks/place/__website/__website.css
+++ b/blocks/place/__website/__website.css
@@ -2,12 +2,12 @@
 
 .place__website {
   margin: 0 0 40px 0;
-  width: 456px;
+  max-width: 456px;
 }
 
 @media screen and (max-width: 1023px) {
   .place__website {
-    width: 352px;
+    max-width: 352px;
   }
 }
 
