--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,25 +3,25 @@
   justify-content: center;
   flex-wrap: wrap;
   margin: 92px auto 92px auto;
-  width: 984px;
+  max-width: 984px;
 }
 
 @media screen and (max-width: 1270px) {
   .places {
-    width: 928px;
+    max-width: 928px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .places {
-    width: 720px;
+    max-width: 720px;
     margin: 88px auto 88px auto;
   }
 }
 
 @media screen and (max-width: 767px) {
   .places {
-    width: 320px;
+    max-width: 320px;
     margin: 64px auto 14px auto;
   }
 }
