--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -18,7 +18,7 @@
 
 @media screen and (max-width: 1023px) {
   .intro {
-    margin: 0 auto 88 auto;
+    margin: 0 auto 88px auto;
     max-width: 720px;
   }
 }
