--- a/blocks/place/__title/__title.css
+++ b/blocks/place/__title/__title.css
@@ -2,7 +2,7 @@
   font-weight: 900;
   font-size: 72px;
   line-height: 1.1;
-  /* margin: 0 0 48px 0; */
+  margin: 0;
   max-width: 460px;
   grid-area: title;
 }
