--- a/blocks/lead/__caption/__caption.css
+++ b/blocks/lead/__caption/__caption.css
@@ -7,3 +7,15 @@
   max-width: 183px;
   margin: 8px 0 0 0;
 }
+
+@media screen and (max-width: 1023px) {
+  .lead__caption {
+    margin: 8px 0 0 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__caption {
+    margin: 8px 0 0 16px;
+  }
+}
