--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,5 +1,3 @@
-@import url(__description/__description.css);
-@import url(__heading/__heading.css);
 @import url(__image/__image.css);
 @import url(__link/__link.css);
 @import url(__paragraph/__paragraph.css);
@@ -10,12 +8,9 @@
 .place {
   margin: 0 0 80px 0;
   width: 100%;
-  /* display: flex;
-  justify-content: center; */
   display: grid;
   grid-template-columns: 460px 456px;
-  grid-template-rows: 76px 460px;
-  /* margin: 0 auto 0 auto; */
+  grid-template-rows: auto;
   grid-template-areas:
     "title website"
     "image paragraph";
@@ -23,9 +18,18 @@
   grid-row-gap: 48px;
 }
 
+@media screen and (max-width: 1279px) {
+  .place {
+    grid-template-columns: 440px 456px;
+    grid-column-gap: 32px;
+  }
+}
+
 @media screen and (max-width: 1023px) {
   .place {
     margin: 0 0 72px 0;
+    grid-template-columns: 340px 352px;
+    grid-column-gap: 28px;
   }
 }
 
@@ -33,5 +37,11 @@
   .place {
     margin: 0 0 48px 0;
     flex-wrap: wrap;
+    grid-template-areas:
+      "title"
+      "image"
+      "paragraph";
+    grid-template-columns: 288px;
+    grid-row-gap: 32px;
   }
 }
