--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -7,7 +7,6 @@
 
 .place {
   margin: 0 0 80px 0;
-  width: 100%;
   display: grid;
   grid-template-columns: 460px 456px;
   grid-template-rows: auto;
@@ -16,6 +15,7 @@
     "image paragraph";
   grid-column-gap: 40px;
   grid-row-gap: 48px;
+  justify-content: center;
 }
 
 @media screen and (max-width: 1279px) {
@@ -36,12 +36,11 @@
 @media screen and (max-width: 767px) {
   .place {
     margin: 0 0 48px 0;
-    flex-wrap: wrap;
     grid-template-areas:
       "title"
       "image"
       "paragraph";
-    grid-template-columns: 288px;
+    grid-template-columns: 1fr;
     grid-row-gap: 32px;
   }
 }
