--- a/blocks/place/__paragraph/__paragraph.css
+++ b/blocks/place/__paragraph/__paragraph.css
@@ -5,16 +5,17 @@
   font-size: 18px;
   line-height: 163%;
   font-weight: 400;
-  /* grid-area: paragraph; */
   margin: 0 0 24px 0;
+}
+
+@media screen and (max-width: 1023px) {
+  .place__paragraph {
+    font-size: 16px;
+  }
 }
 
 @media screen and (max-width: 767px) {
   .place__paragraph {
     text-align: start;
   }
-}
-
-.place__paragraphs {
-  grid-area: paragraphs;
 }
