--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,7 @@
 @import url(__image/__image.css);
 @import url(__link/__link.css);
 @import url(__paragraph/__paragraph.css);
+@import url(__paragraphs/__paragraphs.css);
 @import url(__title/__title.css);
 @import url(__url-heading/__url-heading.css);
 @import url(__website/__website.css);
@@ -39,7 +40,7 @@
     grid-template-areas:
       "title"
       "image"
-      "paragraph";
+      "paragraphs";
     grid-template-columns: 1fr;
     grid-row-gap: 32px;
   }
