--- a/blocks/header/__lang-link/__lang-link.css
+++ b/blocks/header/__lang-link/__lang-link.css
@@ -1,5 +1,4 @@
-@import url(_en/_en.css);
-@import url(_es/_es.css);
+@import url(_active/_active.css);
 
 .header__lang-link {
   color: #ffffff;
@@ -7,6 +6,7 @@
   font-size: 24px;
   line-height: 1.2;
   font-weight: 400;
+  text-decoration: none;
 }
 
 .header__lang-link:hover {
