--- a/blocks/intro/__subtitle/__subtitle.css
+++ b/blocks/intro/__subtitle/__subtitle.css
@@ -1,11 +1,11 @@
-.intro__text_subtitle {
+.intro__subtitle {
   font-size: 24px;
   line-height: 1.4;
   margin: 0 0 32px 0;
 }
 
 @media screen and (max-width: 767px) {
-  .intro__text_subtitle {
+  .intro__subtitle {
     line-height: 1.2;
   }
 }
