--- a/blocks/lead/__caption/__caption.css
+++ b/blocks/lead/__caption/__caption.css
@@ -6,6 +6,7 @@
   letter-spacing: 1.5px;
   max-width: 183px;
   margin: 8px 0 0 0;
+  text-transform: uppercase;
 }
 
 @media screen and (max-width: 1023px) {
