--- a/blocks/cover/__container/__container.css
+++ b/blocks/cover/__container/__container.css
@@ -9,6 +9,17 @@
   position: relative;
   width: 100%;
 }
+@media screen and (max-width: 1279px) {
+  .cover__container {
+    height: 640px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .cover__container {
+    height: 480px;
+  }
+}
 
 @media screen and (max-width: 767px) {
   .cover__container {
