--- a/blocks/place/__paragraph/__paragraph.css
+++ b/blocks/place/__paragraph/__paragraph.css
@@ -1,21 +1,28 @@
-@import url(_main/_main.css);
-@import url(_sub/_sub.css);
-
 .place__paragraph {
   font-size: 18px;
   line-height: 163%;
   font-weight: 400;
   margin: 0 0 24px 0;
+  max-width: 484px;
+}
+
+@media screen and (max-width: 1279px) {
+  .place__paragraph_main {
+    max-width: 456px;
+  }
 }
 
 @media screen and (max-width: 1023px) {
   .place__paragraph {
     font-size: 16px;
+    max-width: 352px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .place__paragraph {
     text-align: start;
+    max-width: 288px;
+    margin: 0 16px;
   }
 }
