--- a/blocks/intro/__list/__list.css
+++ b/blocks/intro/__list/__list.css
@@ -4,4 +4,17 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  max-width: 690px;
+}
+
+@media screen and (max-width: 1023px) {
+  .intro__list {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .intro__list {
+    max-width: 288px;
+  }
 }
