--- a/blocks/intro/__subtitle/__subtitle.css
+++ b/blocks/intro/__subtitle/__subtitle.css
@@ -2,10 +2,18 @@
   font-size: 24px;
   line-height: 1.4;
   margin: 0 0 32px 0;
+  max-width: 690px;
+}
+
+@media screen and (max-width: 1023px) {
+  .intro__subtitle {
+    max-width: 720px;
+  }
 }
 
 @media screen and (max-width: 767px) {
   .intro__subtitle {
     line-height: 1.2;
+    max-width: 288px;
   }
 }
