--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -7,8 +7,8 @@
 @import url(__title/__title.css);
 
 .intro {
-  max-width: 690px;
-  margin: 0 442px 59px 148px;
+  max-width: 984px;
+  margin: 0 auto 92px auto;
 }
 
 @media screen and (max-width: 1279px) {
