--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,17 +4,19 @@
   margin: 0 auto 0 auto;
   max-width: 1184px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 213px);
+  /* grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 213px); */
   grid-gap: 16px;
   padding: 0;
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(213px, 1fr));
 }
 
 @media screen and (max-width: 1279px) {
   .photo-grid {
     max-width: 928px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 225px);
+    /* grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 225px); */
     grid-gap: 14px;
   }
 }
@@ -22,8 +24,8 @@
 @media screen and (max-width: 1023px) {
   .photo-grid {
     max-width: 720px;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(6, 264px);
+    /* grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 264px); */
     grid-gap: 16px;
   }
 }
@@ -31,8 +33,8 @@
 @media screen and (max-width: 767px) {
   .photo-grid {
     max-width: 288px;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(12, 216px);
+    /* grid-template-columns: 1fr;
+    grid-template-rows: repeat(12, 216px); */
     grid-gap: 12px;
   }
 }
