--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,7 +9,7 @@
 .place {
   margin: 0 0 80px 0;
   display: grid;
-  grid-template-columns: 460px 484px;
+  grid-template-columns: 460px 1fr;
   grid-template-rows: auto;
   grid-template-areas:
     "title website"
@@ -21,7 +21,7 @@
 
 @media screen and (max-width: 1279px) {
   .place {
-    grid-template-columns: 440px 456px;
+    grid-template-columns: 440px 1fr;
     grid-column-gap: 32px;
   }
 }
@@ -29,7 +29,7 @@
 @media screen and (max-width: 1023px) {
   .place {
     margin: 0 0 72px 0;
-    grid-template-columns: 340px 352px;
+    grid-template-columns: 340px 1fr;
     grid-column-gap: 28px;
   }
 }
