--- a/blocks/cover/__container/__container.css
+++ b/blocks/cover/__container/__container.css
@@ -9,6 +9,22 @@
   position: relative;
   width: 100%;
 }
+
+.cover__container::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #2a2c2f;
+  opacity: 0.3;
+}
+
+.cover__container:hover::after {
+  opacity: 0.8;
+}
+
 @media screen and (max-width: 1279px) {
   .cover__container {
     height: 640px;
