--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -13,7 +13,7 @@
 
 @media screen and (max-width: 1279px) {
   .intro {
-    margin: 0 286px 92px 48px;
+    /* margin: 0 286px 92px 48px; */
   }
 }
 
