--- a/blocks/footer/__link/__link.css
+++ b/blocks/footer/__link/__link.css
@@ -2,6 +2,11 @@
   margin: 0;
 }
 
+.footer__link:hover {
+  opacity: 0.8;
+  transition: 0.3s;
+}
+
 @media screen and (max-width: 767px) {
   .footer__link {
     margin: 0 0 32px 0;
