--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,22 +4,16 @@
 @import url(__link-text/__link-text.css);
 
 .footer {
-  max-width: 1184px;
+  max-width: calc(100% - 96px);
   margin: 92px auto 0 auto;
   padding-bottom: 24px;
   display: flex;
   justify-content: space-between;
 }
 
-@media screen and (max-width: 1279px) {
-  .footer {
-    max-width: 928px;
-  }
-}
-
 @media screen and (max-width: 1023px) {
   .footer {
-    max-width: 720px;
+    max-width: calc(100% - 48px);
     margin: 88px auto 0 auto;
   }
 }
