--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,27 +4,27 @@
 @import url(__title/__title.css);
 
 .lead {
-  max-width: 984px;
+  max-width: calc(100% - 296px);
   margin: 0 auto 125px auto;
 }
 
 @media screen and (max-width: 1279px) {
   .lead {
-    max-width: 928px;
+    max-width: calc(100% - 96px);
     margin: 0 auto 92px auto;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .lead {
-    max-width: 768px;
+    max-width: 100%;
     margin: 0 auto 88px auto;
   }
 }
 
 @media screen and (max-width: 767px) {
   .lead {
-    max-width: 320px;
+    max-width: 100%;
     margin: 0 auto 92px auto;
   }
 }
