--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,11 +1,9 @@
 @import url(__item/__item.css);
 
 .photo-grid {
-  margin: 0 auto 0 auto;
-  max-width: 1184px;
+  margin: 0 auto;
+  max-width: calc(100% - 96px);
   display: grid;
-  /* grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 213px); */
   grid-gap: 16px;
   padding: 0;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
@@ -14,27 +12,20 @@
 
 @media screen and (max-width: 1279px) {
   .photo-grid {
-    max-width: 928px;
-    /* grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 225px); */
     grid-gap: 14px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .photo-grid {
-    max-width: 720px;
-    /* grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(6, 264px); */
+    max-width: calc(100% - 48px);
     grid-gap: 16px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .photo-grid {
-    max-width: 288px;
-    /* grid-template-columns: 1fr;
-    grid-template-rows: repeat(12, 216px); */
+    max-width: calc(100% - 32px);
     grid-gap: 12px;
   }
 }
