--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,18 +1,18 @@
 .places {
-  margin: 92px auto 92px auto;
-  max-width: 984px;
+  margin: 92px auto;
+  max-width: calc(100% - 296px);
 }
 
 @media screen and (max-width: 1270px) {
   .places {
-    max-width: 928px;
+    max-width: calc(100% - 96px);
   }
 }
 
 @media screen and (max-width: 1023px) {
   .places {
-    max-width: 720px;
-    margin: 88px auto 88px auto;
+    max-width: calc(100% - 48px);
+    margin: 88px auto;
   }
 }
 
