--- a/blocks/header/__lang-link/__lang-link.css
+++ b/blocks/header/__lang-link/__lang-link.css
@@ -17,6 +17,6 @@
 @media screen and (max-width: 767px) {
   .header__lang-link {
     font-size: 18px;
-    line-height: 24px;
+    line-height: 1.3;
   }
 }
