--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,7 +4,8 @@
 @import url(__link-text/__link-text.css);
 
 .footer {
-  max-width: calc(100% - 96px);
+  max-width: 1184px;
+  width: calc(100% - 96px);
   margin: 92px auto 0 auto;
   padding-bottom: 24px;
   display: flex;
