--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -21,7 +21,8 @@
 
 @media screen and (max-width: 767px) {
   .places {
+    width: 100%;
     max-width: 320px;
-    margin: 64px auto 14px auto;
+    margin: 64px 0 14px 0;
   }
 }
