--- a/blocks/intro/__title/__title.css
+++ b/blocks/intro/__title/__title.css
@@ -3,11 +3,13 @@
   font-size: 54px;
   line-height: 1;
   margin: 0 0 40px 0;
+  max-width: 690px;
 }
 
 @media screen and (max-width: 767px) {
   .intro__title {
     font-size: 32px;
     line-height: 1.1;
+    max-width: 720px;
   }
 }
